updated styling to fix overflow when more technicians are added to transfer rate charts

--- a/src/index.css
+++ b/src/index.css
@@ -271,7 +271,6 @@ code {
 }
 
 
-
 .chart_header {
   font-weight: 430;
   font-size: 1.2em;
@@ -288,43 +287,51 @@ code {
   box-sizing: border-box;
   display: grid;
   grid-template-columns: 300px 75px 230px 230px;
-  grid-template-rows: repeat(auto, 200px); 
+  grid-template-rows: auto; 
   padding-top: 20px;
   padding-left: 50px;
  
 }
 
-.doc {
+.doc_wrapper {
   display: flex;
-  justify-content: space-evenly;
-  grid-column-start: 2;
-  grid-row-start: 1;
+  margin-left: 18px;
+  justify-content: left;
+  
+  grid-column-start: 3;
+  flex-wrap: wrap;
   padding-top: 130px;
-  width: 700px;
+  width: 680px;
+  
 }
 
-.trans {
+.trans_wrapper {
   display: flex;
-  justify-content: space-evenly;
-  grid-column-start: 2;
-  grid-row-start: 3;
-  width: 700px;
+  margin-left: 18px;
+  justify-content: left;
+  
+  grid-column-start: 3;
+  flex-wrap: wrap;
+  width: 680px;
 }
 
-.thaw {
+.thaw_wrapper {
   display: flex;
-  justify-content: space-evenly;
-  grid-column-start: 2;
-  grid-row-start: 4;
-  width: 700px;
+  margin-left: 18px;
+  
+  grid-column-start: 3;
+  flex-wrap: wrap;
+  width: 680px;
 }
 
-.vit {
+.vit_wrapper {
   display: flex;
-  justify-content: space-evenly;
-  grid-column-start: 2;
-  grid-row-start: 5;
-  width: 700px;
+  flex-wrap: wrap;
+  margin-left: 18px;
+  
+  grid-column-start: 3;
+  
+  width: 680px;
 }
 
 
@@ -365,12 +372,24 @@ code {
 }
 
 .tech_label {
+  grid-column-start: 2;
   font-weight: 420;
   font-size: 1.2em;
   text-decoration: underline;
   width: 135px;
   padding: 0px;
   margin: 0px;
+}
+
+.doc_label {
+  grid-column-start: 2;
+  font-weight: 420;
+  font-size: 1.2em;
+  text-decoration: underline;
+  width: 135px;
+  padding: 0px;
+  margin: 0px;
+  padding-top: 130px;
 }
 
 .bar_chart {
